server/public/styles.css
.container {
  max-width: 1920px;
  margin: 0 auto;
}

ul {
  padding: 0;
  list-style: none;
}

input,
textarea,
button,
select,
a,
i,
section {
  -webkit-tap-highlight-color: transparent;
}

.image-home {
  padding-top: 4rem;
  height: 90vh;
  max-width: 1920px;
}

.carousel-country-name {
  position: absolute;
  padding: 0.2rem 0.5rem;
  font-size: 1.2rem;
  font-weight: 600;
  background-color: white;
  top: 15%;
  left: 2rem;
  border-radius: 2px;
  text-transform: capitalize;
}

/* CONTROL ARROW FOR CAROUSEL API */
.control-arrow {
  top: 4rem !important;
}

.navbar-container {
  position: fixed;
  width: 100%;
  border-bottom: 1px solid black;
  background-color: white;
  z-index: 2;
  align-items: center;
  height: 3rem;
}

.list-flex {
  max-width: 1920px;
  display: flex;
  flex-wrap: wrap;
  padding-top: 4rem;
  margin-right: 2rem;
  margin-left: 2rem;
}

.search-country-window {
  padding: 5px;
  width: 13rem;
  border: 1px solid rgb(130, 128, 128);
  border-radius: 5px 0 0 5px;
  outline: none;
}

.submit-search-button {
  cursor: pointer;
  background-color: rgb(28, 134, 28);
  color: white;
  border: none;
  border-radius: 0 5px 5px 0;
  padding: 6px 15px;
}

.submit-search-button:active {
  transform: scale(1.1);
}

.column-width100 {
  width: 100%;
}

.column-width50 {
  width: 50%;
}

.margin-top3 {
  margin-top: 3rem;
}

.country-name {
  font-weight: 700;
  font-size: 1.2rem;
  text-transform: capitalize;
}

.city-name {
  font-size: 1.1rem;
}

.navbar-search-box-container {
  margin-left: 2rem;
  display: inline-block;
  flex-basis: 33%;
}

.navbar-app-mobile {
  display: none;
}

.navbar-app-home {
  text-align: center;
  margin: 0 auto;
  flex-basis: 33%;
}

.navbar-app-home a {
  color: rgb(240, 131, 52);
  text-decoration: none;
  font-size: 2rem;
}

.navbar-login-icon-section {
  cursor: pointer;
  flex-basis: 33%;
}

.icon-class {
  float: right;
  margin-right: 2rem;
  width: 5%;
}

.navbar-name-paragraph {
  text-transform: capitalize;
  display: inline-block;
  text-align: end;
  width: 85%;
}

.photo {
  border-radius: 3px;
  width: 100%;
  height: 100%;
}

.image-item {
  position: relative;
  padding: 0.2rem;
}

.image-container {
  justify-content: center;
  align-items: center;
  height: 50vh;
}

.text-container {
  position: absolute;
  background-color: white;
  top: 15px;
  left: 15px;
  padding: 5px;
  cursor: pointer;
  color: black;
  border-radius: 2px;
  text-decoration: none;
}

.text-container:hover {
  color: rgb(240, 131, 52);
}

.text-container:active {
  transform: scale(1.1);
}

.trash-container {
  position: absolute;
  background-color: white;
  top: 15px;
  right: 15px;
  cursor: pointer;
  color: black;
  padding: 0.5rem;
  border-radius: 2px;
}

.trash-container:hover {
  color: rgb(225, 46, 46);
}

.trash-container:active {
  transform: scale(1.2);
}

.detailed-text-container {
  margin-left: 2rem;
  margin-top: 2rem;
}

.score-container {
  margin-top: 1rem;
  margin-left: 1rem;
}

.score-text {
  font-size: 1.1rem;
  padding-block-end: 0.5rem;
  font-weight: 400;
}

.overall-score {
  padding-block-start: 2rem;
  font-weight: 600;
  font-size: 1.3rem;
  font-style: italic;
}

.input-form {
  border: none;
  background-color: inherit;
  color: white;
  letter-spacing: 2px;
  font-size: 1rem;
}

.modal-hidden {
  display: none;
}

.modal-visible {
  position: absolute;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.8);
  width: 100%;
  height: 100vh;
}

::placeholder {
  color: rgb(134, 129, 129);
  font-style: italic;
}

.sign-form {
  margin-top: 7rem;
  width: 24rem;
}

.username-input,
.password-input {
  height: 3rem;
  display: block;
  border-bottom: 1px solid white;
  outline: none;
  margin: 0 auto;
  width: 100%;
}

.row {
  display: flex;
}

.horizontal {
  display: flex;
  flex-direction: row;
}

.centered {
  justify-content: center;
  align-items: center;
}

.app-button {
  border-radius: 7px;
  margin-block-start: 1rem;
  padding-inline-start: 1rem;
  padding-inline-end: 1rem;
  color: white;
  border: none;
  height: 2rem;
  letter-spacing: 4px;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.background-red {
  background-color: rgb(163, 39, 23);
}

.background-orange {
  background-color: rgb(240, 131, 52);
}

.form-label {
  border-bottom: 1px solid white;
  padding-bottom: 20px;
  display: block;
  margin-top: 30px;
  text-align: center;
  color: white;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 2px;
}

input[type="file"]::file-selector-button {
  cursor: pointer;
  background-color: rgb(28, 134, 28);
  color: white;
  border: none;
  border-radius: 5px;
  padding: 0.4rem 0.8rem;
  font-size: 0.9rem;
}

.drop-down-container {
  background-color: rgb(112, 110, 110);
  position: absolute;
  right: 2.1rem;
  top: 48px;
  text-align: center;
}

.drop-down-list {
  width: 10rem;
  list-style-type: none;
  padding: 0;
}

.drop-down-list li {
  text-align: center;
  cursor: pointer;
  color: white;
  border-bottom: 1px solid white;
  padding: 1rem;
  transition: 0.18s linear;
}

.drop-down-list li:hover {
  transform: scale(1.2);
  background-color: rgb(112, 110, 110);
  border-top: 1px solid white;
  border-radius: 3px;
}

.review-form-right h3 {
  padding-bottom: 1rem;
}

.input {
  width: 3rem;
  margin-right: 1rem;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  appearance: none;
}

.review-score-label {
  font-size: 1.125rem;
  font-weight: 700;
  margin-right: 0.5rem;
}

.review-score-input {
  display: inline;
  width: 2rem;
  height: 1.8rem;
  margin-right: 0.5rem;
}

.review-score-form-element {
  display: inline;
}

.review-form-label {
  display: inline-block;
  margin-bottom: 0.3rem;
  font-size: 1.2rem;
  font-weight: 700;
}

.write-review-link {
  color: white;
  text-decoration: none;
  padding: 1rem;
}

.select-element {
  margin-bottom: 1rem;
}
/* ... */

